fixed wrapping of text

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -130,6 +130,7 @@ td.main {
 
 td.sidebar {
 	width: 100%;
+	white-space: nowrap;
 	padding: 1em;
 /*	margin: 0px 10px 0px 10px;*/
 /*	border: 3px solid #000;*/
